@@ -1,3 +1,8 @@
+2008-08-12  Jens Granseuer  <jensgr@gmx.net>
+
+	* gnome-theme-apply.c: (gnome_meta_theme_set): make sure we have a
+	notification theme before trying to save it (bug #547448)
+
 2008-08-03  Jens Granseuer  <jensgr@gmx.net>
 
 	* gnome-theme-apply.c: (gnome_meta_theme_set): if the metatheme loaded
